--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Site!</title>
+    <title>what is this</title>
   </head>
   <body>
-    <h1>I tried lol</h1>
+    <h4 style="text-align: center">can you tell me?</h4>
   </body>
 </html>
