--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Google Search</title>
   </head>
   <body>
+    <a href="./imagesearch.html">Image Search</a>
+    <a href="./advancesearch.html">Advance Search</a>
     <form action="https://www.google.com/search">
       <input type="text" name="q" />
       <input type="submit" value="Google Search" />
